--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -18,6 +18,17 @@
             </div>
         </div>
     </header>
+    <!-- UC 2 -->
+    <div class="form-content">
+        <form class="form" action="#" onsubmit="save(event);return false">
+            <div class="form-head"> Employee Payroll form </div>
+            <div class="row-content">
+                <label class="label text" for="name">Name</label>
+                <input class="input" type="text" id="name" name="name" 
+                       placeholder="Your name.." required>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
 
