--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -27,6 +27,7 @@
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" id="name" name="name" 
                        placeholder="Your name.." required>
+
             </div>
 
              <!---- UC 3  ---->
@@ -155,6 +156,18 @@
 </div> 
 
  </form>
+ 
+ <script>
+
+        const salary = document.querySelector('#salary');
+        const output = document.querySelector('.salary-output');
+        output.textContent = salary.value;
+        salary.addEventListener('input', function() {
+            output.textContent = salary.value;
+        });
+        
+    </script>
+
  </div>
 </body>
 </html>
