--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/payroll_form.css">
+    <link rel="stylesheet" href="../js/EmppayrollData.js">
     <title>Employee payroll form</title>
 </head>
 <body>
@@ -58,6 +59,15 @@
     </div>
 
       <!---- UC 4  ---->
+      <div class="row-content">
+          <label class="label text" for="gender">Gender</label>
+          <div>
+              <input type="radio" id="male" name="gender" value="male">
+              <label class="text" for="male">Male</label>
+              <input type="radio" id="female" name="gender" value="female">
+              <label class="text" for="female">Female</label>
+          </div>
+      </div>
       <div class="row-content">
         <label class="label text" for="department">Department</label>
         <div>
