Refactored:nameValidation message modified

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -27,9 +27,10 @@
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" id="name" name="name" 
-                       placeholder="Your name.." required>
-                <error-output class="name-error" for="name"></error-output>
+                       placeholder="Your name.." required>               
             </div>
+            <span id='name-error'><error-output class="name-error" for="name"></error-output></span>
+
 
              <!---- UC 3  ---->
     <div class="row-content">
