--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/payroll_form.css">
-    <link rel="stylesheet" href="../js/EmppayrollData.js">
+    <link rel="stylesheet" href="../css/new_payroll_form.css">
     <title>Employee payroll form</title>
+    <script defer src="../js/EmployeePayroll.js"></script>
+    <script defer src="../js/new_payroll_form.js"></script>
+    
 </head>
 <body>
     <!-- UC 1 -->
@@ -18,18 +20,17 @@
                 <span class="emp-text emp-payroll">PAYROLL</span>
             </div>
         </div>
-    </header>
-
-             <!-- UC 2 -->
-    <div class="form-content">
-        <form class="form" action="#" onsubmit="save(event);return false">
+    </header>          
+    <div id="formId" class="form-content">
+        <form class="form" action="#" onreset="resetForm()" onsubmit="save()">  
+                <!-- UC 2 -->
             <div class="form-head"> Employee Payroll form </div>
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" id="name" name="name" 
                        placeholder="Your name.." required>               
-            </div>
-            <span id='name-error'><error-output class="name-error" for="name"></error-output></span>
+                       <error-output class="text-error" for="text"></error-output>
+                    </div>
 
 
              <!---- UC 3  ---->
@@ -167,26 +168,6 @@
 </div> 
 
  </form>
- 
- <script>
-
-        const name = document.querySelector('#name');
-        const nameError = document.querySelector('.name-error');
-        name.addEventListener('input', function() {
-            let nameRegex = RegExp('^[A-Z]{1}[a-z]{2,}$');
-            if (nameRegex.test(name.value))
-            nameError.textContent = "";
-            else nameError.textContent = "Name is Incorrect";
-        });
-
-        const salary = document.querySelector('#salary');
-        const output = document.querySelector('.salary-output');
-        output.textContent = salary.value;
-        salary.addEventListener('input', function() {
-            output.textContent = salary.value;
-        });
-        
-    </script>
 
  </div>
 </body>
