--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -28,10 +28,9 @@
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" id="name" name="name" 
-                       placeholder="Your name.." required>               
-                       <error-output class="text-error" for="text"></error-output>
+                       placeholder="Your name.." autoComplete = "off" required>               
                     </div>
-
+            <span><error-output class="text-error" for="text"></error-output></span>
 
              <!---- UC 3  ---->
     <div class="row-content">
@@ -73,15 +72,15 @@
       <div class="row-content">
         <label class="label text" for="department">Department</label>
         <div>
-            <input class="checkbox" type="checkbox" id="hr" name="hr" value="HR">
+            <input class="checkbox" type="checkbox" id="hr" name="department" value="HR">
             <label class="text" for="hr">HR</label>
-            <input class="checkbox" type="checkbox" id="sales" name="sales" value="Sales">
+            <input class="checkbox" type="checkbox" id="sales" name="department" value="Sales">
             <label class="text" for="sales">Sales</label>
-            <input class="checkbox" type="checkbox" id="finance" name="finance" value="Finance">
+            <input class="checkbox" type="checkbox" id="finance" name="department" value="Finance">
             <label class="text" for="finance">Finance</label>
-            <input class="checkbox" type="checkbox" id="engineer" name="engineer" value="Engineer">
+            <input class="checkbox" type="checkbox" id="engineer" name="department" value="Engineer">
             <label class="text" for="engineer">Engineer</label>
-            <input class="checkbox" type="checkbox" id="others" name="others" value="Others">
+            <input class="checkbox" type="checkbox" id="others" name="department" value="Others">
             <label class="text" for="others">Others</label>
         </div>
     </div>
@@ -96,7 +95,7 @@
     <div class="row-content">
         <label class="label text" for="startDate">Start Date</label>
         <div>
-            <select id="day" name="Day">
+            <select id="day" name="day">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -129,21 +128,21 @@
                 <option value="30">30</option>
                 <option value="31">31</option>
             </select>
-            <select id="month" name="Month">
-                <option value="Jan">January</option>
-                <option value="Feb">February</option>
-                <option value="March">March</option>
-                <option value="April">April</option>
-                <option value="May">May</option>
-                <option value="June">June</option>
-                <option value="July">July</option>
-                <option value="Aug">August</option>
-                <option value="Sept">September</option>
-                <option value="Oct">October</option>
-                <option value="Nov">November</option>
-                <option value="Dec">December</option>
+            <select id="month" name="month">
+                <option value="1">January</option>
+                <option value="2">February</option>
+                <option value="3">March</option>
+                <option value="4">April</option>
+                <option value="5">May</option>
+                <option value="6">June</option>
+                <option value="7">July</option>
+                <option value="8">August</option>
+                <option value="9">September</option>
+                <option value="10">October</option>
+                <option value="11">November</option>
+                <option value="12">December</option>
             </select>
-            <select id="year" name="Year">
+            <select id="year" name="year">
                 <option value="2020">2020</option>
                 <option value="2019">2019</option>
                 <option value="2018">2018</option>
