--- a/pages/home.html
+++ b/pages/home.html
@@ -24,43 +24,23 @@
         <!-- UC 2-->
         <div class="header-content">
             <div class="emp-detail-text">
-                Employee Details <div class="emp-count">10</div>
+                Employee Details <div class="emp-count">1</div>
             </div>
             <a href="../pages/payroll_form.html" class="add-button">
             <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
         </div>  <!-- header-content -->
         <div class="table-main">
-            <table id="display" class="table">
+            <table id="table-display" class="table">
                 <!-- UC 3 -->
-                <tr>
-                    <th></th>
-                    <th>Name</th>
-                    <th>Gender</th>
-                    <th>Department</th>
-                    <th>Salary</th> 
-                    <th>Start Date</th>
-                    <th>Actions</th> 
-                </tr>
-                <tr>
-                    <td><img class="profile" alt="" 
-                        src="../assets/profile-images/Ellipse -2.png">
-                    </td>
-                    <td>Rohit Bhat</td>
-                    <td>Male</td>
-                    <td><div class='dept-label'>HR</div>
-                        <div class='dept-label'>Finance</div></td>
-                        <td>3000000</td>
-                        <td>1 Nov 2020</td>
-                        <td>
-                            <img id="1" onclick="remove(this)" alt="delete"
-                            src="../assets/icons/delete-black-18dp.svg">
-                            <img id="1" alt="edit" onclick="update(this)"
-                            src="../assets/icons/create-black-18dp.svg">  
-                        </td>
-                </tr>
+                
             </table>
 
         </div> <!-- table-main -->
     </div> <!-- main-content -->
+
+    <script src="../js/home.js"></script>
+    <script src="../js/utility.js"></script>
+    <script src="../js/site-properties.js"></script>
+    <script src="../js/EmployeePayroll.js"></script>
 </body>
 </html>
