--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -8,7 +8,9 @@
     <title>Employee payroll form</title>
     <script defer src="../js/EmployeePayroll.js"></script>
     <script defer src="../js/new_payroll_form.js"></script>
-    
+    <script src="../js/site-properties.js"></script>
+    <script src="../js/utility.js"></script>
+
 </head>
 <body>
     <!-- UC 1 -->
@@ -38,23 +40,48 @@
         <div class="profile-radio-content">
             <label>
                 <input type="radio" id="profile1" name="profile"
-                    value="../assets/profile-images/Ellipse -3.png" required>
-                <img class="profile" id='image1' src="../assets/profile-images/Ellipse -3.png">
+                    value="../assets/profile-images/Ellipse -1.png" required>
+                <img class="profile" id='image1' src="../assets/profile-images/Ellipse -1.png">
             </label>
             <label>
                 <input type="radio" id="profile2" name="profile"
-                    value="../assets/profile-images/Ellipse 1.png" required>
-                <img class="profile" id='image2' src="../assets/profile-images/Ellipse 1.png">
+                    value="../assets/profile-images/Ellipse -2.png" required>
+                <img class="profile" id='image2' src="../assets/profile-images/Ellipse -2.png">
             </label>
             <label>
                 <input type="radio" id="profile3" name="profile"
-                    value="../assets/profile-images/Ellipse -8.png" required>
-                <img class="profile" id='image3' src="../assets/profile-images/Ellipse -8.png">
+                    value="../assets/profile-images/Ellipse -3.png" required>
+                <img class="profile" id='image3' src="../assets/profile-images/Ellipse -3.png">
+            </label>
+            <label>
+                <input type="radio" id="profile4" name="profile"
+                    value="../assets/profile-images/Ellipse -4.png" required>
+                <img class="profile" id='image4' src="../assets/profile-images/Ellipse -4.png">
+            </label>
+            <label>
+                <input type="radio" id="profile4" name="profile"
+                    value="../assets/profile-images/Ellipse -5.png" required>
+                <img class="profile" id='image5' src="../assets/profile-images/Ellipse -5.png">
             </label>
             <label>
                 <input type="radio" id="profile4" name="profile"
                     value="../assets/profile-images/Ellipse -7.png" required>
-                <img class="profile" id='image4' src="../assets/profile-images/Ellipse -7.png">
+                <img class="profile" id='image6' src="../assets/profile-images/Ellipse -7.png">
+            </label>
+            <label>
+                <input type="radio" id="profile4" name="profile"
+                    value="../assets/profile-images/Ellipse -8.png" required>
+                <img class="profile" id='image7' src="../assets/profile-images/Ellipse -8.png">
+            </label>
+            <label>
+                <input type="radio" id="profile4" name="profile"
+                    value="../assets/profile-images/Ellipse -9.png" required>
+                <img class="profile" id='image8' src="../assets/profile-images/Ellipse -9.png">
+            </label>
+            <label>
+                <input type="radio" id="profile4" name="profile"
+                    value="../assets/profile-images/Ellipse -10.png" required>
+                <img class="profile" id='image9' src="../assets/profile-images/Ellipse -10.png">
             </label>
         </div>
     </div>
@@ -64,11 +91,11 @@
           <label class="label text" for="gender">Gender</label>
           <div class="genderone">
           <label>
-              <input type="radio" id="male" name="gender" value="male">
+              <input type="radio" id="male" name="gender" value="Male">
               <label class="text" for="male">Male</label>
           </label>
           <label>
-              <input type="radio" id="female" name="gender" value="female">
+              <input type="radio" id="female" name="gender" value="Female">
               <label class="text" for="female">Female</label>
           </label>
           </div>
@@ -157,6 +184,7 @@
                 <option value="12">December</option>
             </select>
             <select id="year" name="year">
+                <option value="2021">2021</option>
                 <option value="2020">2020</option>
                 <option value="2019">2019</option>
                 <option value="2018">2018</option>
