--- a/pages/home.html
+++ b/pages/home.html
@@ -7,7 +7,6 @@
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;1,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <title>Employee Payroll Application</title>
-    <script defer src="../js/home.js"></script>
 </head>
 <body>
     <!-- UC 1 -->
@@ -37,10 +36,10 @@
 
         </div> <!-- table-main -->
     </div> <!-- main-content -->
+</body>
 
     <script src="../js/home.js"></script>
     <script src="../js/utility.js"></script>
-    <script src="../js/site-properties.js"></script>
+    <script src="../js/site_properties.js"></script>
     <script src="../js/EmployeePayroll.js"></script>
-</body>
 </html>
