--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -8,7 +8,7 @@
     <title>Employee payroll form</title>
     <script defer src="../js/EmployeePayroll.js"></script>
     <script defer src="../js/new_payroll_form.js"></script>
-    <script src="../js/site-properties.js"></script>
+    <script src="../js/site_properties.js"></script>
     <script src="../js/utility.js"></script>
 
 </head>
@@ -24,7 +24,7 @@
         </div>
     </header>          
     <div id="formId" class="form-content">
-        <form class="form" action="#" onreset="resetForm()" onsubmit="save()">  
+        <form class="form" action="#" onreset="resetForm()" onsubmit="save(event)">  
                 <!-- UC 2 -->
             <div class="form-head"> Employee Payroll form </div>
             <div class="row-content">
@@ -135,7 +135,7 @@
     <!--- UC 5 --->
     <div class="row-content">
         <label class="label text" for="startDate">Start Date</label>
-        <div>
+        <div id="date">
             <select id="day" name="day">
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -169,19 +169,19 @@
                 <option value="30">30</option>
                 <option value="31">31</option>
             </select>
-            <select id="month" name="month">
-                <option value="1">January</option>
-                <option value="2">February</option>
-                <option value="3">March</option>
-                <option value="4">April</option>
-                <option value="5">May</option>
-                <option value="6">June</option>
-                <option value="7">July</option>
-                <option value="8">August</option>
-                <option value="9">September</option>
-                <option value="10">October</option>
-                <option value="11">November</option>
-                <option value="12">December</option>
+            <select id="month" name="Month">
+                <option value="January">January</option>
+                <option value="February">February</option>
+                <option value="March">March</option>
+                <option value="April">April</option>
+                <option value="May">May</option>
+                <option value="June">June</option>
+                <option value="July">July</option>
+                <option value="August">August</option>
+                <option value="September">September</option>
+                <option value="October">October</option>
+                <option value="November">November</option>
+                <option value="December">December</option>
             </select>
             <select id="year" name="year">
                 <option value="2021">2021</option>
@@ -192,6 +192,7 @@
                 <option value="2016">2016</option>
             </select>
         </div>
+        <error-output class="date-error" for="startDate"></error-output>
     </div>
 
      <!--- UC 6 --->
@@ -201,7 +202,7 @@
             style="height: 100px"></textarea>
 </div>
 <div class="button-content">
-    <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
+    <a href="./home.html" id="cancelButton" class="resetButton button cancelButton">Cancel</a>
     <div class="submit-reset">
         <button type="submit" class="button submitButton" id="submitButton">Submit</button>
         <button type="reset" class="resetButton button">Reset</button>
